fix:fixed overflowing issues in signup page

--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -12,19 +12,23 @@
 .signupDiv{
     display: flex;
     height: 100%;
-   
+  
     /* width:100vw; */
 }
 
 
 .left-section {
     width: 100%;
-    /* height:100vh; */
+    height:100vh;
     background: url('/assets/images/unsplash.jpg') no-repeat center center; 
     object-fit: contain;
-
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
      position: relative;
     flex: 1;
+    
 }
 
 .logo {
@@ -49,13 +53,13 @@
     background-size: cover;
     background-position: center;
     /* height: 100%; */
-    /* height: 100%; */
+    height: 100%;
     flex: 1; 
     background-color: #f8f9fa;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    padding: 20px 0px 0px;
     position: relative;
 }
 
